--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Arpan</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/imgs/favicon.ico">
+    <link rel="shortcut icon" href="assets/imgs/fav.ico">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
@@ -87,7 +87,7 @@
 
                 <!-- Logo -->
                 <a class="logo icon-img-100" href="#">
-                    <img src="assets/imgs/logo-light.png" alt="logo">
+                    <img src="assets/imgs/arpan-logo.png" alt="logo">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -1054,7 +1054,7 @@
                             <div class="col-lg-4">
                                 <div class="logo">
                                     <a href="#0">
-                                        <img src="assets/imgs/logo-light.png" alt="">
+                                        <img src="assets/imgs/arpan-logo.png" alt="">
                                     </a>
                                 </div>
                             </div>
